# meeting-notes-tauri

./: .gitignore  DECISIONS.md  PROJECT.md  README.md  SPEC.md  package-lock.json  package.json  tsconfig.json  tsconfig.test.json  vite.config.ts
config/: azure.example.json  user-settings.example.json
scripts/: check-node.mjs  check-toolchain.ps1  clean-sidecar.mjs  dist-portable.mjs  patch-w64devkit-gcc-eh.ps1  run-with-toolchain.ps1  setup-toolchain.ps1  test-smoke.mjs
sidecar/: ArgsParser.cs  AudioCaptureClient.cs  AudioResampler.cs  AzureSpeechService.cs  DeviceResolver.cs  Logger.cs  LoopbackCaptureClient.cs  MeetingNotes.Sidecar.csproj  MicCaptureClient.cs  Program.cs
specs/: T-100-tauri-migration-planen-und-grundstruktu.md  T-101-tauri-2-scaffold-mit-react-und-vite.md  T-102-ipc-vertrag-zwischen-renderer-und-rust.md  T-103-konfiguration-azure-und-user-settings.md  T-104-migrationsplan-was-bleibt-was-wandert.md  T-200-c-sharp-sidecar-architektur-audio-und-azure.md  T-201-json-lines-protokoll-tauri-zu-sidecar.md  T-202-audio-capture-mit-naudio-wasapi.md  T-203-audio-resampling-16khz-mono-pcm.md  T-204-azure-speech-sdk-integration-im-sidecar.md  T-205-continuous-lid-und-diarization-in-c-sharp.md  T-206-azure-start-pfad-mit-rollback.md  T-207-sidecar-deployment-framework-dependent-exe.md  T-300-tauri-main-als-orchestrator.md  T-301-sidecar-spawn-via-shell-plugin.md  T-302-tauri-commands.md  T-303-tauri-events.md  T-304-connectivity-diagnose-in-rust.md  T-305-settings-persistenz-im-tauri-main.md  T-306-proxy-aware-azure-transport.md  T-400-react-frontend-auf-tauri-portieren.md  T-401-tauri-preload-bridge.md  T-402-ui-komponenten-portieren.md  T-501-smoke-test-tauri-und-sidecar.md  (+7 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  connectivity.rs  events.rs  lib.rs  main.rs  settings.rs  sidecar.rs  state.rs
(+19 files in other folders)
