[package]
name = "meeting-notes-tauri"
version = "0.1.0"
description = "Meeting Notes PoC (Tauri 2 + React + C# Sidecar)"
authors = ["Martin Schirmer"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "meeting_notes_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
hickory-resolver = "0.24"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
url = "2"
